--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chuck Norris Jokes</title>
+    <link rel="shortcut icon" href="/static/favicon.png" type="image" />
 </head>
 <body style="height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column; background-color: #fb5607">
 <img src="/static/chucknorris_logo_coloured_small.png"><br>
