--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="/static/favicon.png" type="image" />
 </head>
 <body style="height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column; background-color: #fb5607">
-<img src="/static/chucknorris_logo_coloured_small.png"><br>
-<strong style="font-size: 25px">Random Joke From Chuck Norris:</strong> <p style="font-size: 20px; color: white; text-align: center;">{{ response }}</p>
+<img src="/static/chucknorris_logo_coloured_small.png" style="display: flex; align-items: center;"><br>
+<strong style="font-size: 25px; text-align: center;">Random Joke From Chuck Norris:</strong> <p style="font-size: 20px; color: white; text-align: center;">{{ response }}</p>
 </body>
 </html>
